--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,13 @@ classifiers = [
 dependencies = [
     "pydantic>=2.10.6,<3.0.0",
     "backports.strenum>=1.3.0 ; python_version < '3.11'",
-    "httpx>=0.23.0,<1.0.0"
+    "typing-extensions>=4.0.0 ; python_version < '3.11'",
+    "httpx>=0.23.0,<1.0.0",
+    "tomli>=2.0.0,<3.0.0 ; python_version < '3.11'",
+    "tomlkit>=0.12.0",
+    "semantic-version>=2.10.0,<3.0.0",
+    "typer>=0.9.0",
+    "rich>=13.0.0",
 ]
 
 [project.optional-dependencies]
@@ -31,6 +37,9 @@ dev = [
     "pylint==4.0.4",
     "ruff==0.14.13",
 ]
+
+[project.scripts]
+mthds = "mthds.cli.app:app"
 
 [build-system]
 requires = ["hatchling"]
@@ -61,6 +70,11 @@ module = [
     "json2html",
     "pypdfium2",
     "pypdfium2.raw",
+    "semantic_version",
+    "semantic_version.*",
+    "tomli",
+    "tomlkit",
+    "tomlkit.*",
 ]
 
 [tool.pyright]
