--- a/.github/workflows/tests-check.yml
+++ b/.github/workflows/tests-check.yml
@@ -13,7 +13,7 @@ jobs:
 # --------------------------------------------------------------------------
   matrix-test:
     name: Tests (py${{ matrix.python-version }})
-    runs-on: [aca-runner-test]
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
