--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "pylint==4.0.4",
     "ruff==0.14.13",
     "pytest>=8.0.0,<9.0.0",
+    "pytest-mock>=3.12.0,<4.0.0",
 ]
 
 [project.scripts]
